apps/home/home-assistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      component: app
  template:
    metadata:
      labels:
        component: app
    spec:
      containers:
        - name: home-assistant-app
          image: 'ghcr.io/home-assistant/home-assistant:2026.9.3@sha256:d8922685169707fd91e8b9729902d975f06157d005e422874d201e0261dda196'
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: true
          ports:
            - name: http
              containerPort: 8123
              protocol: TCP
          resources: {}
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
          volumeMounts:
            - name: ha-config-root
              mountPath: /config
            - name: ha-configuration-base
              mountPath: /config/configuration.yaml
              subPath: configuration.yaml
              readOnly: true
            - name: authentication-scripts
              mountPath: /usr/bin/auth-oidc.py
              subPath: auth-oidc.py
              readOnly: true
            - name: ha-configuration-base
              mountPath: /config/pdu-sensors.yaml
              subPath: pdu-sensors.yaml
              readOnly: true
      restartPolicy: Always
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      volumes:
        - name: ha-config-root
          persistentVolumeClaim:
            claimName: config-root
        - name: ha-configuration-base
          configMap:
            name: configuration
            items:
              - key: configuration.yaml
                path: configuration.yaml
              - key: pdu-sensors.yaml
                path: pdu-sensors.yaml
        - name: authentication-scripts
          configMap:
            name: authentication-scripts
            items:
              - key: auth-oidc.py
                path: auth-oidc.py
                mode: 0555
