apps/home/home-assistant/tesla-fleet-api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tesla-fleet-api-public-key
spec:
  revisionHistoryLimit: 3
  replicas: 1
  selector:
    matchLabels:
      component: tesla-fleet-api-public-key
  template:
    metadata:
      labels:
        component: tesla-fleet-api-public-key
    spec:
      containers:
        - name: static-file-server
          image: busybox:stable@sha256:73aaf090f3d85aa34ee199857f03fa3a95c8ede2ffd4cc2cdb5b94e566b11662
          args:
            - httpd
            - -f
            - -p
            - '8080'
            - -h
            - /www
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              cpu: 50m
              memory: 32Mi
          readinessProbe:
            tcpSocket:
              port: 8080
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          volumeMounts:
            - name: tesla-fleet-api-public-key
              mountPath: /www/.well-known/appspecific/com.tesla.3p.public-key.pem
              subPath: com.tesla.3p.public-key.pem
              readOnly: true
      volumes:
        - name: tesla-fleet-api-public-key
          configMap:
            name: tesla-fleet-api-public-key
            items:
              - key: com.tesla.3p.public-key.pem
                path: com.tesla.3p.public-key.pem
---
apiVersion: v1
kind: Service
metadata:
  name: tesla-fleet-api-public-key
spec:
  selector:
    component: tesla-fleet-api-public-key
  ports:
    - name: http
      port: 8080
