apps/home/home-assistant/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: 'home-assistant'
spec:
  entryPoints:
    - 'websecure'
  routes:
    - match: 'Host(`hass.red.orleans.io`) && Path(`/.well-known/appspecific/com.tesla.3p.public-key.pem`)'
      kind: 'Rule'
      services:
        - name: 'tesla-fleet-api-public-key'
          port: 8080
    - match: 'Host(`hass.red.orleans.io`)'
      kind: 'Rule'
      services:
        - name: 'home-assistant'
          port: http
      # middlewares:
      #   - name: security-no-frame-deny
      #     namespace: kube-system
  tls:
    secretName: wildcard-orleans-io
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  labels:
    monitor: home-assistant
spec:
  selector:
    component: app
  ports:
    - name: http
      port: 8123
      targetPort: http
